<resources>
    <string name="app_name">Blacksmith</string>
    <string name="default_item_count">0</string>
    <string name="add_one">Add 1</string>

    <string name="mine_description">A mine</string>
    <string name="inventory_description">An inventory</string>
    <string name="furnace_description">A furnace</string>
    <string name="anvil_description">An anvil</string>
    <string name="table_description">A table</string>
    <string name="shop_description">A shop</string>
    <string name="visitor_description">A visitor</string>

    <string name="mineText">Mine</string>
    <string name="furnaceText">Furnace</string>
    <string name="anvilText">Anvil</string>
    <string name="inventoryText">Inventory</string>
    <string name="tableText">Table</string>
    <string name="shopText">Shop</string>
    <string name="visitorText">Visitor</string>
    <string name="tradeText">Trade</string>

    <string name="unknownText">\???</string>

    <string name="craftFailure">You cannot craft this.</string>
    <string name="craftAdd">Item added to craft queue.</string>


</resources>
