<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_2part"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="2"
        tools:context="uk.co.jakelee.blacksmith.main.MenuActivity">

        <uk.co.jakelee.blacksmith.controls.TextViewPixel
            android:id="@+id/menuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menuText"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="60sp" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/menuTitle">

            <RelativeLayout
                android:id="@+id/shapeLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/open_mine"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:onClick="openMine"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pickaxe" />

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/text_mine"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/open_mine"
                    android:text="@string/mineText"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/open_furnace"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_toRightOf="@id/open_mine"
                    android:onClick="openFurnace"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/furnace" />

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/text_furnace"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/open_furnace"
                    android:layout_toRightOf="@id/text_mine"
                    android:text="@string/furnaceText"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/open_anvil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@id/text_mine"
                    android:onClick="openAnvil"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/anvil" />

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/text_anvil"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/open_anvil"
                    android:text="@string/anvilText"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/open_inventory"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@id/text_furnace"
                    android:layout_toRightOf="@id/open_anvil"
                    android:onClick="openInventory"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/inventory" />

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/text_inventory"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/open_inventory"
                    android:layout_toRightOf="@id/text_anvil"
                    android:text="@string/inventoryText"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/open_table"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@id/text_inventory"
                    android:onClick="openTable"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/table" />

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/text_table"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/open_table"
                    android:text="@string/tableText"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:onClick="closePopup"
        android:src="@drawable/close" />
</RelativeLayout>